ft(user): Completes user can flag a property advert
- Write unit tests for endpoint
- Create POST route to api/v1/flag
- Test endpoint using Postman

[Delivers #167185312]
